--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/responsive.css">
-    <title>React App</title>
+    <title>Yakhi</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
