--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <!-- bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/fullcalendar.css">
     <!-- animate.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- fontawesome -->
@@ -107,5 +107,27 @@
         // instead of a settings object
       ]
     });
+  </script>
+  <script src="%PUBLIC_URL%/js/calendar.js"></script>
+  <script src="%PUBLIC_URL%/js/fslightbox.js"></script>
+
+
+
+  <script>
+  
+    document.addEventListener('DOMContentLoaded', function() {
+  
+      var calendarEl = document.getElementById('calendar');
+  
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+  
+        initialView: 'dayGridMonth'
+  
+      });
+  
+      calendar.render();
+  
+    });
+  
   </script>
 </html>
