--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     />
     <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.ico" type="image/x-icon">
     <!-- slick slider -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@300&family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"/>
 
