--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <base href="%PUBLIC_URL%/yakhi" target="_blank" />
+    <base href="%PUBLIC_URL%" target="_blank" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -38,7 +38,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/responsive.css">
-    <title>Yakhi</title>
+    <title>Yahki</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
