map integration in progress

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHPUufTlBkF5NfBT3uhS9K4BbW2N-mkb4&libraries=places"></script>
+
   <script src="https://www.paypal.com/sdk/js?client-id=ASiSqkLrGz972fYCyfH36FFNug0V8UDsDAW9GUWzEx5SOxAmRF0hp1KgfhDTHCRRlvWlDWw3RJXuw6Lp"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <!-- slick js -->
