--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <base href="%PUBLIC_URL%" target="_blank" />
+    <base href="%PUBLIC_URL%/" target="_blank" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -56,7 +56,6 @@
   </body>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHPUufTlBkF5NfBT3uhS9K4BbW2N-mkb4&libraries=places"></script>
 
-  <script src="https://www.paypal.com/sdk/js?client-id=ASiSqkLrGz972fYCyfH36FFNug0V8UDsDAW9GUWzEx5SOxAmRF0hp1KgfhDTHCRRlvWlDWw3RJXuw6Lp"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <!-- slick js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
